新增懸浮歌詞框(待優化)、修正暫停後播放時間異常